--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,9 @@ main p {
     text-align: justify;
     text-justify: inter-word;
 }
-
+.gradiente {
+    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+  }
 
 .botones {
     margin-left: 60%;
