--- a/styles/style.css
+++ b/styles/style.css
@@ -58,4 +58,10 @@ main p {
     border: 2px solid orange;
   }
 
- 
+  #oradores {
+    padding-top: 50px;
+  }
+
+  #lugaryfecha {
+    padding-top: 70px;
+  }
